# ai4ams

./: .gitignore  DISCLAIMER.md  LICENSE  PYPI_PACKAGE_PLAN.md  README.md  RELEASE_CHECKLIST.md  index.html  pyproject.toml  scrub_check.py
cases/i66_nvta/: CASE_I66.md  dashboard.html  network_map.html
cases/i66_nvta/artifacts/: boundary_gates.csv  compact_manifest.json  gateway_od.csv  prepare_manifest.json  quality_gates.json  subarea_link_ids.csv  trajectory_subarea_sample.geojson  zone_tier_map.csv
docs/: AMS_LESSONS.md  GAP_REFLECTION_MEMO.md  KERNEL_SUBAREA_EXPORT_DESIGN.md  STREAMLINED_PROCESS.md  WORKFLOW_RUNBOOK.md  ZONE_LAYER_REGISTRY.md
examples/dashboards/: I66_PROCESS_DASHBOARD.html  I66_STATS_DASHBOARD.html  multiresolution_view.html
registers/: expert_gap_validation_register.csv
schemes/: subarea_run.template.yml  tmc_matching_template.yml
skills/: ams_dta_consultant_review.md
subarea/: __init__.py
subarea/process/: __init__.py  __main__.py  classify.py  compact.py  config.py  convert.py  dtat.py  omx_demand.py  prepare.py
